devops/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdpwebsiteravb-react
  namespace: digimeo-clients
spec:
  selector:
    app: tdpwebsiteravb-react
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
