devops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdpwebsiteravb-react
  namespace: digimeo-clients
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: tourneedesplages.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tdpwebsiteravb-react
                port:
                  number: 80
  tls:
    - hosts:
        - tourneedesplages.fr
      secretName: tdpwebsiteravb-react-prod-tls
